@@ -1,3 +1,11 @@
+2002-04-02  Adam Fedor  <fedor@gnu.org>
+
+	* Source/NSGraphicsContext.m (-GSDefineGState): Document new
+	definition of method.
+	* Source/NSWindow.m ([NSWindow -_initBackendWindow:]): Change to
+	match new def.	
+	* Source/NSView.m ([NSView -lockFocusInRect:]): Idem.
+
 2002-04-02  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
 
 	* Source/NSTableView.m ([NSTableView -scrollRowToVisible:]): 
